Change crate name to phylum-types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "phylum_common"
+name = "phylum_types"
 description = "Common public types shared between the Phylum CLI and API"
 version = "0.1.0"
 edition = "2018"
