In support of ongoing work on the api side, add a feature flag to gate certain changes that are being worked on
* Update project summary response to use timestamps
* Add created_at field
* Added feature flag for ongoing migration work on api side

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "phylum_types"
 description = "Common public types shared between the Phylum CLI and API"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
+[features]
+dev_api_issue_96 = ["chrono"]
+
 [dependencies]
+chrono = { version = "0.4.11", default-features = true, features = [
+    "serde",
+], optional = true }
 log = "^0.4.6"
 serde = { version = "^1.0", features = ["derive"] }
 serde_derive = "1.0"
