Restore dev_api_issue_96 feature flag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ description = "Common public types shared between the Phylum CLI and API"
 version = "0.1.0"
 edition = "2018"
 
+[features]
+dev_api_issue_96 = []
+
 [dependencies]
 chrono = { version = "0.4.11", default-features = true, features = ["serde"] }
 log = "^0.4.6"
