--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dev_api_issue_96 = []
 [dependencies]
 chrono = { version = "0.4.11", default-features = true, features = ["serde"] }
 log = "^0.4.6"
+schemars = { version = "0.8", features = ["chrono", "uuid08"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_derive = "1.0"
 uuid = { version = "0.8", features = ["serde", "v4"] }
