--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-chrono = { version = "0.4.11", features = ["serde"] }
+chrono = { version = "0.4.11", default-features = false, features = ["serde"] }
 log = "^0.4.6"
 schemars = { version = "0.8", features = ["chrono", "uuid08"] }
 serde = { version = "^1.0", features = ["derive"] }
