Add MIT license to Cargo manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "phylum_types"
 description = "Common public types shared between the Phylum CLI and API"
 version = "0.1.0"
+authors = ["Phylum, Inc. <engineering@phylum.io>"]
+license = "MIT"
 edition = "2018"
 
 [dependencies]
