--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 chrono = { version = "0.4.11", default-features = false, features = ["serde"] }
+purl = "0.1.1"
 schemars = { version = "0.8", features = ["chrono", "uuid1"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_derive = "1.0"
